1. ui优化，增强交互体验感 2. 增加关卡复杂度